--- a/index.html
+++ b/index.html
@@ -23,8 +23,16 @@
                 </ul>
             </nav>
             <ul class="list flex">
-                <li class="item-kont"><a href="mailto:info@devstudio.com" class="link kont">info@devstudio.com</a></li>        
-                <li class="item-kont"><a href="tel:+380961111111" class="link kont">+38 096 111 11 11</a></li>        
+                <li class="item-kont"><a href="mailto:info@devstudio.com" class="link kont">
+                    <svg width="16" height="12">
+                        <use href="./image/icon.svg#icon-envelope"></use>
+                    </svg>info@devstudio.com</a>
+                </li>        
+                <li class="item-kont"><a href="tel:+380961111111" class="link kont">
+                    <svg width="12" height="16">
+                        <use href="./image/icon.svg#icon-smartphone"></use>
+                    </svg>+38 096 111 11 11</a>
+                </li>        
             </ul>
         </div>
     </header>
@@ -32,7 +40,7 @@
     <main>
 
         <!--герой-->
-        <section class="section-hero" style="background-color: #2F303A;"> <!--фон тимчасово-->
+        <section class="section-hero">
             <div class="conteiner">
                 <h1 class="hero">Эффективные решения для вашего бизнеса</h1>
                 <button type="button" class="btn">Заказать услугу</button>
@@ -45,15 +53,19 @@
                 <h2 class="visually-hidden">Особености</h2> <!--потом спрятать-->
                 <ul class="list flex">
                     <li class="item-osob">
+                        <div class="osob-list-icon"><svg class="icon-osob" width="70" height="70"><use href="./image/icon.svg#icon-antenna" ></use></svg></div>
                         <h3 class="osobenost">Внимание к деталям</h3> <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                     </li>
                     <li class="item-osob">
+                        <div class="osob-list-icon"><svg class="icon-osob" width="70" height="70"><use href="./image/icon.svg#icon-clock"></use></svg></div>
                         <h3 class="osobenost">Пунктуальность</h3> <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                     </li>
                     <li class="item-osob">
+                        <div class="osob-list-icon"><svg class="icon-osob" width="70" height="70"><use href="./image/icon.svg#icon-diagram"></use></svg></div>
                         <h3 class="osobenost">Планирование</h3> <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                     </li>
                     <li class="item-osob">
+                        <div class="osob-list-icon"><svg class="icon-osob" width="70" height="70"><use href="./image/icon.svg#icon-astronaut"></use></svg></div>
                         <h3 class="osobenost">Современные технологии</h3> <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                     </li>
                 </ul>
@@ -88,6 +100,36 @@
                         <div class="team-div">
                             <h3 class="teamer">Игорь Демьяненко</h3>
                             <p lang="en" class="prof">Product Designer</p>
+                            <ul class="social-list list">
+                                <li class="social-list-item">
+                                    <a href="" class="social-list-link">
+                                        <svg class="social-list-icon" width="20" height="20">
+                                            <use href="./image/icon.svg#icon-instagram"></use>
+                                        </svg>    
+                                    </a>
+                                </li>
+                                <li class="social-list-item">
+                                    <a href="" class="social-list-link">
+                                        <svg class="social-list-icon" width="20" height="20">
+                                            <use href="./image/icon.svg#icon-twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-list-item">
+                                    <a href="" class="social-list-link">
+                                        <svg class="social-list-icon" width="20" height="20">
+                                            <use href="./image/icon.svg#icon-facebook"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-list-item">
+                                    <a href="" class="social-list-link">
+                                        <svg class="social-list-icon" width="20" height="20">
+                                            <use href="./image/icon.svg#icon-linkedin"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                     <li class="item-team">
@@ -95,6 +137,36 @@
                         <div class="team-div">
                             <h3 class="teamer">Ольга Репина</h3>
                             <p lang="en" class="prof">Frontend Developer</p>
+                            <ul class="social-list list">
+                                <li class="social-list-item">
+                                    <a href="" class="social-list-link">
+                                        <svg class="social-list-icon" width="20" height="20">
+                                            <use href="./image/icon.svg#icon-instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-list-item">
+                                    <a href="" class="social-list-link">
+                                        <svg class="social-list-icon" width="20" height="20">
+                                            <use href="./image/icon.svg#icon-twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-list-item">
+                                    <a href="" class="social-list-link">
+                                        <svg class="social-list-icon" width="20" height="20">
+                                            <use href="./image/icon.svg#icon-facebook"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-list-item">
+                                    <a href="" class="social-list-link">
+                                        <svg class="social-list-icon" width="20" height="20">
+                                            <use href="./image/icon.svg#icon-linkedin"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                     <li class="item-team">
@@ -102,6 +174,36 @@
                         <div class="team-div">
                             <h3 class="teamer">Николай Тарасов</h3>
                             <p lang="en" class="prof">Marketing</p>
+                            <ul class="social-list list">
+                                <li class="social-list-item">
+                                    <a href="" class="social-list-link">
+                                        <svg class="social-list-icon" width="20" height="20">
+                                            <use href="./image/icon.svg#icon-instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-list-item">
+                                    <a href="" class="social-list-link">
+                                        <svg class="social-list-icon" width="20" height="20">
+                                            <use href="./image/icon.svg#icon-twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-list-item">
+                                    <a href="" class="social-list-link">
+                                        <svg class="social-list-icon" width="20" height="20">
+                                            <use href="./image/icon.svg#icon-facebook"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-list-item">
+                                    <a href="" class="social-list-link">
+                                        <svg class="social-list-icon" width="20" height="20">
+                                            <use href="./image/icon.svg#icon-linkedin"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                     <li class="item-team">
@@ -109,16 +211,102 @@
                         <div class="team-div">
                             <h3 class="teamer">Михаил Ермаков</h3>
                             <p lang="en" class="prof">UI Designer</p>
+                            <ul class="social-list list">
+                                <li class="social-list-item">
+                                    <a href="" class="social-list-link">
+                                        <svg class="social-list-icon" width="20" height="20">
+                                            <use href="./image/icon.svg#icon-instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-list-item">
+                                    <a href="" class="social-list-link">
+                                        <svg class="social-list-icon" width="20" height="20">
+                                            <use href="./image/icon.svg#icon-twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-list-item">
+                                    <a href="" class="social-list-link">
+                                        <svg class="social-list-icon" width="20" height="20">
+                                            <use href="./image/icon.svg#icon-facebook"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-list-item">
+                                    <a href="" class="social-list-link">
+                                        <svg class="social-list-icon" width="20" height="20">
+                                            <use href="./image/icon.svg#icon-linkedin"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                 </ul>
             </div>
         </section>
+
+
+        <!--постоянные клиенты-->
+        <section class="section">
+            <div class="conteiner">
+                <h2 class="podzagolovok">Постоянные клиенты</h2>
+                <ul class="client-list list">
+                    <li class="client-list-item">
+                        <a href="" class="client-list-link">
+                            <svg class="client-list-icon" width="106" height="60">
+                                <use href="./image/icon.svg#icon-comp1"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="client-list-item">
+                        <a href="" class="client-list-link">
+                            <svg class="client-list-icon" width="106" height="60">
+                                <use href="./image/icon.svg#icon-comp2"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="client-list-item">
+                        <a href="" class="client-list-link">
+                            <svg class="client-list-icon" width="106" height="60">
+                                <use href="./image/icon.svg#icon-comp3"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="client-list-item">
+                        <a href="" class="client-list-link">
+                            <svg class="client-list-icon" width="106" height="60">
+                                <use href="./image/icon.svg#icon-comp4"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="client-list-item">
+                        <a href="" class="client-list-link">
+                            <svg class="client-list-icon" width="106" height="60">
+                                <use href="./image/icon.svg#icon-comp5"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="client-list-item">
+                        <a href="" class="client-list-link">
+                            <svg class="client-list-icon" width="106" height="60">
+                                <use href="./image/icon.svg#icon-comp6"></use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </section>
+
+
+
     </main>
 
     <!--footer-->
     <footer class="footer">
         <div class="conteiner">
+            <div>
             <a href=""class="logo link">Web<span class="white">Studio</span></a>
             <address class="addr">
                 <p>г. Киев, пр-т Леси Украинки, 26</p>
@@ -127,6 +315,40 @@
                     <li class="item-addr"><a href="tel:+380961111111" class="link addr">+38 096 111 11 11</a></li>
                 </ul>
             </address>
+            </div>
+            <div>
+                <p class="footer-text">присоединяйтесь</p>
+                <ul class="footer-list list">
+                    <li class="footer-list-item">
+                        <a href="" class="footer-list-link">
+                            <svg class="footer-list-icon" width="20" height="20">
+                                <use href="./image/icon.svg#icon-instagram"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="footer-list-item">
+                        <a href="" class="footer-list-link">
+                            <svg class="footer-list-icon" width="20" height="20">
+                                <use href="./image/icon.svg#icon-twitter"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="footer-list-item">
+                        <a href="" class="footer-list-link">
+                            <svg class="footer-list-icon" width="20" height="20">
+                                <use href="./image/icon.svg#icon-facebook"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="footer-list-item">
+                        <a href="" class="footer-list-link">
+                            <svg class="footer-list-icon" width="20" height="20">
+                                <use href="./image/icon.svg#icon-linkedin"></use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </footer>
 </body>
