--- a/portfolio.html
+++ b/portfolio.html
@@ -23,8 +23,16 @@
                 </ul>
             </nav>
             <ul class="list flex">
-                <li class="item-kont"><a href="mailto:info@devstudio.com" class="link kont">info@devstudio.com</a></li>
-                <li class="item-kont"><a href="tel:+380961111111" class="link kont">+38 096 111 11 11</a></li>
+                <li class="item-kont"><a href="mailto:info@devstudio.com" class="link kont">
+                        <svg width="16" height="12">
+                            <use href="./image/icon.svg#icon-envelope"></use>
+                        </svg>info@devstudio.com</a>
+                </li>
+                <li class="item-kont"><a href="tel:+380961111111" class="link kont">
+                        <svg width="12" height="16">
+                            <use href="./image/icon.svg#icon-smartphone"></use>
+                        </svg>+38 096 111 11 11</a>
+                </li>
             </ul>
         </div>
     </header>
@@ -133,14 +141,50 @@
     <!--footer-->
     <footer class="footer">
         <div class="conteiner">
-            <a href="" class="logo link">Web<span class="white">Studio</span></a>
-            <address class="addr">
-                <p>г. Киев, пр-т Леси Украинки, 26</p>
-                <ul class="list">
-                    <li class="item-addr"><a href="mailto:info@devstudio.com" class="link addr">info@devstudio.com</a></li>
-                    <li class="item-addr"><a href="tel:+380961111111" class="link addr">+38 096 111 11 11</a></li>
+            <div>
+                <a href="" class="logo link">Web<span class="white">Studio</span></a>
+                <address class="addr">
+                    <p>г. Киев, пр-т Леси Украинки, 26</p>
+                    <ul class="list">
+                        <li class="item-addr"><a href="mailto:info@devstudio.com" class="link addr">info@devstudio.com</a>
+                        </li>
+                        <li class="item-addr"><a href="tel:+380961111111" class="link addr">+38 096 111 11 11</a></li>
+                    </ul>
+                </address>
+            </div>
+            <div>
+                <p class="footer-text">присоединяйтесь</p>
+                <ul class="footer-list list">
+                    <li class="footer-list-item">
+                        <a href="" class="footer-list-link">
+                            <svg class="footer-list-icon" width="20" height="20">
+                                <use href="./image/icon.svg#icon-instagram"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="footer-list-item">
+                        <a href="" class="footer-list-link">
+                            <svg class="footer-list-icon" width="20" height="20">
+                                <use href="./image/icon.svg#icon-twitter"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="footer-list-item">
+                        <a href="" class="footer-list-link">
+                            <svg class="footer-list-icon" width="20" height="20">
+                                <use href="./image/icon.svg#icon-facebook"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="footer-list-item">
+                        <a href="" class="footer-list-link">
+                            <svg class="footer-list-icon" width="20" height="20">
+                                <use href="./image/icon.svg#icon-linkedin"></use>
+                            </svg>
+                        </a>
+                    </li>
                 </ul>
-            </address>
+            </div>
         </div>
     </footer>
 </body>
